@@ -123,6 +123,10 @@ Core
 * New set_process_name sub which is used to change the status in the process
   name indicator.
 
+* Fixed problem where form values do not always default to the $Values hash
+  values for corresponding form fields when defaults=1 and wizard=1 are both
+  set in the table editor.
+
 UserDB
 ------
 
